--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:text="+"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:text="-"
         android:textSize="40sp"
         app:layout_constraintStart_toEndOf="@+id/plus"
@@ -57,28 +57,32 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:text="*"
         android:textSize="40sp"
         app:layout_constraintStart_toEndOf="@+id/minus"
-        tools:layout_editor_absoluteY="186dp" />
+        app:layout_constraintTop_toBottomOf="@+id/n2" />
 
     <Button
         android:id="@+id/divide"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:text="/"
         android:textSize="40sp"
         app:layout_constraintStart_toEndOf="@+id/multiply"
-        tools:layout_editor_absoluteY="186dp" />
+        app:layout_constraintTop_toBottomOf="@+id/n2" />
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="223dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="204dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="20dp"
         android:hint="Result"
-        app:layout_constraintTop_toBottomOf="@+id/minus"
-        tools:layout_editor_absoluteX="81dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/minus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
